# zenclash

./: CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  PARALLEL_DEVELOPMENT_PLAN.md  PROJECT_SUMMARY.md  README.md
benches/: benchmark.rs
crates/zenclash-cli/: Cargo.toml
crates/zenclash-cli/src/: main.rs
crates/zenclash-core/: Cargo.toml
crates/zenclash-core/src/: error.rs  lib.rs  main.rs  sysproxy.rs
crates/zenclash-core/src/config/: app.rs  mihomo.rs  mod.rs  override.rs  profile.rs  tests.rs
crates/zenclash-core/src/core/: api.rs  dns.rs  factory.rs  manager.rs  mod.rs  permissions.rs  process.rs  profile_updater.rs  substore.rs  tests.rs
crates/zenclash-core/src/profile/: profile.rs
crates/zenclash-core/src/proxy/: delay_test.rs  mod.rs  proxy.rs  selector.rs  tests.rs
crates/zenclash-core/src/resolve/: floating_window.rs  gist.rs  mod.rs
crates/zenclash-core/src/server/: mod.rs  pac.rs
crates/zenclash-core/src/sys/: autorun.rs  mod.rs  ssid.rs
crates/zenclash-core/src/system/: dns.rs  mod.rs  sysproxy.rs  tests.rs  tun.rs
crates/zenclash-core/src/traffic/: mod.rs  monitor.rs
crates/zenclash-core/src/utils/: dirs.rs  format.rs  http.rs  logger.rs  mod.rs
crates/zenclash-ui/: Cargo.toml
crates/zenclash-ui/src/: app.rs  lib.rs  main.rs  notification.rs  shortcuts.rs  tray.rs  updater.rs  window.rs
crates/zenclash-ui/src/components/: code_editor.rs  connection_detail.rs  connection_item.rs  connection_table.rs  edit_modals.rs  log_item.rs  mod.rs  modals.rs  profile_item.rs  proxy_item.rs  rule_item.rs  sidebar.rs  sidebar_cards.rs  toast.rs
crates/zenclash-ui/src/pages/: backup.rs  connections.rs  dashboard.rs  dns.rs  logs.rs  mihomo.rs  mod.rs  override_page.rs  profiles.rs  proxies.rs  resources.rs  rules.rs  settings.rs  sniffer.rs  substore.rs  sysproxy.rs  tun.rs
docs/: ARCHITECTURE.md
scripts/: build.sh  install-deps.sh  package.sh
tests/: e2e_workflow_test.rs  integration_test.rs
