[workspace]
members = [
    "crates/zenclash-core",
    "crates/zenclash-ui",
    "crates/zenclash-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["ZenClash Team"]
license = "MIT"
repository = "https://github.com/mihomo-party-org/zenclash"
rust-version = "1.80"

[workspace.dependencies]
gpui = "0.2.2"
gpui-component = "0.5.1"
gpui-component-assets = "0.5.1"
tokio = { version = "1.40", features = ["full"] }
tokio-util = "0.7"
reqwest = { version = "0.12", features = ["json"] }
tokio-tungstenite = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
notify = "6.1"
dirs = "5.0"
parking_lot = "0.12"
once_cell = "1.20"
dashmap = "6.1"
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 1
