[package]
name = "zenclash-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

description = "CLI tool for ZenClash"
keywords = ["cli", "proxy", "mihomo", "zen"]
categories = ["command-line-utilities"]

[[bin]]
name = "zenclash-cli"
path = "src/main.rs"

[dependencies]
zenclash-core = { path = "../zenclash-core" }
tokio = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
