[package]
name = "zenclash-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

description = "Core library for ZenClash - Mihomo proxy management"
keywords = ["proxy", "mihomo", "clash", "network", "zen"]
categories = ["network-programming"]

[dependencies]
tokio = { workspace = true }
tokio-util = { workspace = true }
reqwest = { workspace = true }
tokio-tungstenite = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
notify = { workspace = true }
dirs = { workspace = true }
parking_lot = { workspace = true }
once_cell = { workspace = true }
dashmap = { workspace = true }
uuid = { version = "1.0", features = ["v4"] }
futures-util = "0.3"
urlencoding = "2.1"
url = "2.5"
sysproxy = "0.3"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.52"

[dev-dependencies]
tokio-test = { workspace = true }

[[bin]]
name = "zenclash-core-test"
path = "src/main.rs"