[package]
name = "zenclash-ui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

description = "GUI application for ZenClash using GPUI"
keywords = ["gui", "proxy", "mihomo", "desktop", "zen"]
categories = ["gui"]

[[bin]]
name = "zenclash"
path = "src/main.rs"

[dependencies]
zenclash-core = { path = "../zenclash-core" }

gpui = { workspace = true }
gpui-component = { workspace = true }
gpui-component-assets = { workspace = true }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
parking_lot = { workspace = true }
dirs = { workspace = true }

zip = { version = "2", default-features = false, features = ["deflate"] }

tray-icon = "0.19"

# Global hotkey support
global-hotkey = "0.6"

[features]
default = []
